Phase-3 Removal vavr dependency